--- a/owner/owner-client/src/app/_layouts/menus/menu-item-create/menu-item-create.component.css
+++ b/owner/owner-client/src/app/_layouts/menus/menu-item-create/menu-item-create.component.css
@@ -1,39 +1,68 @@
 .form-wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    padding-top: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 2rem;
 }
 
 .info {
-    flex: 50%;
-    background-color: lightcoral;
+  flex: 50%;
+  padding: 1rem;
 }
 
 .permissions {
-    flex: 50%;
-    background-color: lightblue;
+  flex: 50%;
+  padding: 1rem 0;
 }
 
 .two-col {
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
 }
 
-.slide-toggle-wrapper {
-    display: flex;
-    flex-direction: column;
+.permissions-with-btn {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
+.two-col-permissions {
+  justify-content: space-around;
+}
+
+.toggle-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 
 @media (max-width: 960px) {
-    .info,
-    .permissions {
-        flex: 100%;
-    }
+  .info,
+  .permissions {
+    flex: 100%;
+  }
 
-    .two-col {
-        flex-direction: column;
-        gap: 0;
-    }
+  .info {
+    padding: 0;
+  }
+
+  .permissions {
+    padding: 0;
+  }
+
+  .permissions-with-btn {
+    gap: 1rem;
+    margin-top: 1rem;
+  }
+
+  .toggle-wrapper {
+    margin: 0.5rem;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .two-col {
+    flex-direction: column;
+    gap: 0;
+  }
 }
