--- a/owner/owner-client/src/app/_layouts/menus/menu-item-list/menu-item-list.component.html
+++ b/owner/owner-client/src/app/_layouts/menus/menu-item-list/menu-item-list.component.html
@@ -1,1 +1,5 @@
-<app-menu-item-card></app-menu-item-card>
+<div class="main-wrapper">
+    <ng-container *ngFor="let menuItem of menuItems">
+        <app-menu-item-card [menuItem]="menuItem"></app-menu-item-card>
+    </ng-container>
+</div>
