Can delete menu

--- a/owner/owner-client/src/app/_layouts/menus/menus-details/menus-details.component.html
+++ b/owner/owner-client/src/app/_layouts/menus/menus-details/menus-details.component.html
@@ -8,7 +8,7 @@
 
       <div class="btn-wrapper center max-width">
         <button mat-raised-button color="accent">Edit Menu</button>
-        <button mat-raised-button color="warn">Delete Menu</button>
+        <button mat-raised-button color="warn" (click)="onDeleteMenu()">Delete Menu</button>
       </div>
     </div>
   </div>
