fixed height problem in menu-item-card

--- a/owner/owner-client/src/app/_components/menu-item-card/menu-item-card.component.css
+++ b/owner/owner-client/src/app/_components/menu-item-card/menu-item-card.component.css
@@ -2,6 +2,8 @@
   width: 20rem;
   height: 28rem;
   position: relative;
+  display: flex;
+  justify-content: space-between;
 }
 
 .img-wrapper {
@@ -9,6 +11,18 @@
   height: 12rem;
   background-color: black;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.spinner-wrapper {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   display: flex;
   align-items: center;
   justify-content: center;
