--- a/owner/owner-client/src/app/_components/menu-item-card/menu-item-card.component.html
+++ b/owner/owner-client/src/app/_components/menu-item-card/menu-item-card.component.html
@@ -1,7 +1,11 @@
 <mat-card class="card-wrapper" *ngIf="menuItem"
   [ngStyle]="{border: menuItem.specialOffer ? '3px solid var(--primary)' : '1px solid var(--accent)'}">
   <div class="img-wrapper">
-    <img src="{{ menuItem.image || 'assets/img/default.png' }}" class="img" alt="menu item image" />
+    <div class="spinner-wrapper" *ngIf="isImageLoading">
+      <mat-spinner color="{{menuItem.specialOffer ? 'primary' : 'accent'}}"></mat-spinner>
+    </div>
+    <img src="{{ menuItem.image || 'assets/img/default.png' }}" class="img" alt="menu item image"
+      (load)="isImageLoading = false" (error)="menuItem.image = 'assets/img/default.png'" />
     <img *ngIf="menuItem.specialOffer" src="assets/img/special-offer.png" class="special-offer" alt="special offer">
   </div>
   <mat-card-header>
@@ -22,7 +26,7 @@
   </mat-card-content>
   <mat-card-actions>
     <div class="btn-wrapper">
-      <button type="button" mat-raised-button color="warn">Remove</button>
+      <button type="button" mat-raised-button color="warn" (click)="onDelete()">Remove</button>
       <button type="button" mat-raised-button color="accent">Edit</button>
     </div>
   </mat-card-actions>
