Finished design for menu item details

--- a/owner/owner-client/src/app/_layouts/menus/menu-item-details/menu-item-details.component.html
+++ b/owner/owner-client/src/app/_layouts/menus/menu-item-details/menu-item-details.component.html
@@ -37,7 +37,16 @@
             expedita fuga iste reprehenderit tempore ipsam, assumenda consequuntur hic maxime tenetur porro. Omnis, at!
         </p>
         <div class="footer-wrapper">
-            
+            <div class="order-btn-wrapper">
+                <a href="#" mat-icon-button><mat-icon svgIcon="bullhorn" color="primary"></mat-icon></a>
+                <div>59</div>
+                <div>Today Orders</div>
+            </div>
+
+            <button mat-raised-button color="accent">
+                <mat-icon svgIcon="edit"></mat-icon>
+                Edit
+            </button>
         </div>
     </div>
 </div>
