--- a/owner/owner-client/src/app/_layouts/menus/menu-item-details/menu-item-details.component.css
+++ b/owner/owner-client/src/app/_layouts/menus/menu-item-details/menu-item-details.component.css
@@ -4,7 +4,7 @@
     width: 100%;
     height: 15rem;
     overflow: hidden;
-    background-color: black;;
+    background-color: black;
     border: 1px solid var(--primary);
     border-radius: 5px;
     position: relative;
@@ -33,8 +33,9 @@
 
 .content-wrapper {
     display: flex;
-    flex-wrap: wrap;
     margin-top: 2rem;
+    gap: 1rem;
+    flex-direction: row;
 }
 
 .info {
@@ -54,13 +55,34 @@
     border-radius: 5px;
 }
 
+.description {
+    color: var(--primary);
+}
+
 .row-wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
+.order-btn-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: var(--primary);
+}
+
+.footer-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
 @media (max-width: 960px) {
+    .content-wrapper {
+        flex-direction: column;
+    }
+
     .info,
     .description-wrapper {
         flex: 100%;
