--- a/owner/owner-client/src/app/_layouts/menus/menu-item-details/menu-item-details.component.html
+++ b/owner/owner-client/src/app/_layouts/menus/menu-item-details/menu-item-details.component.html
@@ -1,52 +1,57 @@
-<div class="header-wrapper center">
-    <div class="background center">
-        <div class="name">Neko jelooooo</div>
+<ng-container *ngIf="menuItem">
+    <div class="header-wrapper center">
+        <div class="background center">
+            <div class="name">{{ menuItem.name }}</div>
+        </div>
+        <img src="{{ menuItem.image || 'assets/img/default.png' }}" alt="menu item image" class="img">
     </div>
-    <img src="assets/img/food/food1.jpeg" alt="menu item image" class="img">
-</div>
 
-<div class="content-wrapper">
-    <div class="info">
-        <div class="row-wrapper">
-            <div>Cijena</div>
-            <div>$25</div>
-        </div>
-        <mat-divider></mat-divider>
-        <div class="row-wrapper">
-            <div>Active</div>
-            <div>
-                <mat-icon style="color: var(--success)" svgIcon="correct-circle"></mat-icon>
+    <div class="content-wrapper">
+        <div class="info">
+            <div class="row-wrapper">
+                <div>Price</div>
+                <div>${{ menuItem.price }}</div>
+            </div>
+            <mat-divider></mat-divider>
+            <div class="row-wrapper">
+                <div>Active</div>
+                <div>
+                    <mat-icon *ngIf="menuItem.active" style="color: var(--success)" svgIcon="correct-circle"></mat-icon>
+                    <mat-icon *ngIf="!menuItem.active" style="color: var(--warning)" svgIcon="xmark"></mat-icon>
+                </div>
+            </div>
+            <mat-divider></mat-divider>
+            <div class="row-wrapper">
+                <div>Special Offer</div>
+                <div>
+                    <mat-icon *ngIf="menuItem.specialOffer" style="color: var(--success)"
+                        svgIcon="correct-circle"></mat-icon>
+                    <mat-icon *ngIf="!menuItem.specialOffer" style="color: var(--warning)" svgIcon="xmark"></mat-icon>
+                </div>
+            </div>
+            <mat-divider></mat-divider>
+            <div class="row-wrapper">
+                <div>Special Offer Price</div>
+                <div>${{ menuItem.specialOfferPrice }}</div>
             </div>
         </div>
-        <mat-divider></mat-divider>
-        <div class="row-wrapper">
-            <div>Special Offer</div>
-            <div>
-                <mat-icon style="color: var(--warning)" svgIcon="xmark"></mat-icon>
-            </div>
-        </div>
-        <mat-divider></mat-divider>
-        <div class="row-wrapper">
-            <div>Special Offer Price</div>
-            <div>$21</div>
-        </div>
-    </div>
-    <div class="description-wrapper">
-        <h1 class="description">Description</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et aliquam fugit laboriosam aut saepe veniam non
-            expedita fuga iste reprehenderit tempore ipsam, assumenda consequuntur hic maxime tenetur porro. Omnis, at!
-        </p>
-        <div class="footer-wrapper">
-            <div class="order-btn-wrapper">
-                <a href="#" mat-icon-button><mat-icon svgIcon="bullhorn" color="primary"></mat-icon></a>
-                <div>59</div>
-                <div>Today Orders</div>
-            </div>
+        <div class="description-wrapper">
+            <h1 class="description">Description</h1>
+            <p>
+                {{ menuItem.description }}
+            </p>
+            <div class="footer-wrapper">
+                <div class="order-btn-wrapper">
+                    <a href="#" mat-icon-button><mat-icon svgIcon="bullhorn" color="primary"></mat-icon></a>
+                    <div>{{ menuItem.todayOrders }}</div>
+                    <div>Today Orders</div>
+                </div>
 
-            <button mat-raised-button color="accent">
-                <mat-icon svgIcon="edit"></mat-icon>
-                Edit
-            </button>
+                <button mat-raised-button color="accent" routerLink="/menus/menu-items/edit/{{menuItem.id}}">
+                    <mat-icon svgIcon="edit"></mat-icon>
+                    Edit
+                </button>
+            </div>
         </div>
     </div>
-</div>
+</ng-container>
