Working on account layout

--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav.component.html
@@ -1,27 +1,42 @@
 <mat-toolbar>
-    <div class="nav-wrapper">
-      <ng-content></ng-content>
-      <!-- pokazuje se samo kad je tablet ili mobitel -->
-      <div class="logo-wrapper">
-        <img src="assets/img/costic-logo-84x41.png" alt="logo">
-      </div>
-      <!-- ************************************************ -->
-      <div class="search-wrapper">
-        <app-search-bar></app-search-bar>
-      </div>
-      <div class="right-toggle">
-        <app-right-toggle></app-right-toggle>
-      </div>
-      <div class="right-side">
-        <button mat-icon-button>
-          <mat-icon matBadge="5" aria-hidden="false">mail_outline</mat-icon>
-        </button>
-        <button mat-icon-button>
-          <mat-icon matBadge="3" aria-hidden="false">notifications_none</mat-icon>
-        </button>
-        <div class="img-wrapper">
-          <img src="assets/img/profile.jpg" alt="profile picture" class="img">
-        </div>
-      </div>
+  <div class="nav-wrapper">
+    <ng-content></ng-content>
+    <!-- pokazuje se samo kad je tablet ili mobitel -->
+    <div class="logo-wrapper">
+      <img src="assets/img/costic-logo-84x41.png" alt="logo">
     </div>
-  </mat-toolbar>
+    <!-- ************************************************ -->
+    <div class="search-wrapper">
+      <app-search-bar></app-search-bar>
+    </div>
+    <div class="right-toggle">
+      <app-right-toggle></app-right-toggle>
+    </div>
+    <div class="right-side">
+      <button mat-icon-button>
+        <mat-icon matBadge="5" aria-hidden="false">mail_outline</mat-icon>
+      </button>
+      <button mat-icon-button>
+        <mat-icon matBadge="3" aria-hidden="false">notifications_none</mat-icon>
+      </button>
+      <div class="img-wrapper" [matMenuTriggerFor]="accountMenu">
+        <img src="assets/img/profile.jpg" alt="profile picture" class="img">
+      </div>
+
+      <mat-menu #accountMenu="matMenu" class="accountMenuBtn">
+        <button mat-menu-item type="button" routerLink="/account">
+          <mat-icon svgIcon="user" class="svg"></mat-icon>
+          Account
+        </button>
+        <button mat-menu-item>
+          <mat-icon svgIcon="edit-user" class="svg"></mat-icon>
+          Edit Account
+        </button>
+        <button mat-menu-item>
+          <mat-icon svgIcon="logout" class="svg"></mat-icon>
+          Log Out
+        </button>
+      </mat-menu>
+    </div>
+  </div>
+</mat-toolbar>
