--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav.component.css
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav.component.css
@@ -32,6 +32,14 @@
   width: 35%;
 }
 
+.accountMenuBtn {
+  font-size: 14px;
+}
+
+.svg {
+  height: 14px;
+}
+
 @media only screen and (min-width: 960px) {
   .right-toggle {
     display: none;
