Added data to account info

--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav.component.html
@@ -28,7 +28,7 @@
           <mat-icon svgIcon="user" class="svg"></mat-icon>
           Account
         </button>
-        <button mat-menu-item>
+        <button mat-menu-item routerLink="/account/edit">
           <mat-icon svgIcon="edit-user" class="svg"></mat-icon>
           Edit Account
         </button>
