--- a/owner/owner-client/src/app/_layouts/account/account-info/account-info.component.html
+++ b/owner/owner-client/src/app/_layouts/account/account-info/account-info.component.html
@@ -1,89 +1,89 @@
-<div class="main-wrapper">
-  <div class="info-wrapper">
-    <div class="info-row">
-      <div>Username</div>
-      <div>zuna21</div>
-    </div>
-    <mat-divider></mat-divider>
-    <div class="info-row">
-      <div>First Name</div>
-      <div>Adir</div>
-    </div>
-    <mat-divider></mat-divider>
-    <div class="info-row">
-      <div>Last Name</div>
-      <div>Zunic</div>
-    </div>
-    <mat-divider></mat-divider>
-    <div class="info-row">
-      <div>Email</div>
-      <div>adir.zunic@gmail.com</div>
-    </div>
-    <mat-divider></mat-divider>
-    <div class="info-row">
-        <div>Country</div>
-        <div>Bosnia and Herzegovina</div>
+<ng-container *ngIf="account">
+  <div class="main-wrapper">
+    <div class="info-wrapper">
+      <div class="info-row">
+        <div>Username</div>
+        <div>{{ account.username }}</div>
       </div>
       <mat-divider></mat-divider>
-    <div class="info-row">
-      <div>City</div>
-      <div>Doboj</div>
+      <div class="info-row">
+        <div>First Name</div>
+        <div>{{ account.firstName }}</div>
+      </div>
+      <mat-divider></mat-divider>
+      <div class="info-row">
+        <div>Last Name</div>
+        <div>{{ account.lastname }}</div>
+      </div>
+      <mat-divider></mat-divider>
+      <div class="info-row">
+        <div>Email</div>
+        <div>{{ account.email }}</div>
+      </div>
+      <mat-divider></mat-divider>
+      <div class="info-row">
+        <div>Country</div>
+        <div>{{ account.country }}</div>
+      </div>
+      <mat-divider></mat-divider>
+      <div class="info-row">
+        <div>City</div>
+        <div>{{ account.city }}</div>
+      </div>
+      <mat-divider></mat-divider>
+      <div class="info-row">
+        <div>Address</div>
+        <div>{{ account.address }}</div>
+      </div>
+      <mat-divider></mat-divider>
+      <div class="info-row">
+        <div>Phone</div>
+        <div>{{ account.phone }}</div>
+      </div>
+      <mat-divider></mat-divider>
+      <div class="info-row">
+        <div>Birth</div>
+        <div>{{ account.birth | date }}</div>
+      </div>
     </div>
-    <mat-divider></mat-divider>
-    <div class="info-row">
-      <div>Address</div>
-      <div>Braca Jugovic 85</div>
-    </div>
-    <mat-divider></mat-divider>
-    <div class="info-row">
-      <div>Phone</div>
-      <div>+387 60 32 69 778</div>
-    </div>
-    <mat-divider></mat-divider>
-    <div class="info-row">
-      <div>Birth</div>
-      <div>08 may, 1999</div>
+    <div class="description-wrapper">
+      <h1 class="description">Description</h1>
+      <p>
+        {{ account.description }}
+      </p>
+      <div class="description-btn-wrapper">
+        <div class="description-btn">
+          <button type="button" mat-icon-button>
+            <mat-icon svgIcon="users"></mat-icon>
+          </button>
+          <div>{{ account.employeesNumber }}</div>
+          <div>Employees</div>
+        </div>
+
+        <div class="description-btn">
+          <button type="button" mat-icon-button>
+            <mat-icon svgIcon="restaurant"></mat-icon>
+          </button>
+          <div>{{ account.restaurantsNumber }}</div>
+          <div>Restaurant</div>
+        </div>
+
+        <div class="description-btn">
+          <button type="button" mat-icon-button>
+            <mat-icon svgIcon="menu"></mat-icon>
+          </button>
+          <div>{{ account.menusNumber }}</div>
+          <div>Menus</div>
+        </div>
+
+        <div class="description-btn">
+          <button type="button" mat-icon-button>
+            <mat-icon svgIcon="bullhorn"></mat-icon>
+          </button>
+          <div>{{ account.todayOrdersNumber }}</div>
+          <div>Today Orders</div>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="description-wrapper">
-    <h1 class="description">Description</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, nemo.
-      Fuga eveniet iste deleniti facere quae nihil autem cum non nisi laudantium
-      corporis, nostrum pariatur, delectus obcaecati laborum at nam!
-    </p>
-    <div class="description-btn-wrapper">
-        <div class="description-btn">
-            <button type="button" mat-icon-button>
-                <mat-icon svgIcon="users"></mat-icon>
-            </button>
-            <div>12</div>
-            <div>Employees</div>
-        </div>
-
-        <div class="description-btn">
-            <button type="button" mat-icon-button>
-                <mat-icon svgIcon="restaurant"></mat-icon>
-            </button>
-            <div>1</div>
-            <div>Restaurant</div>
-        </div>
-
-        <div class="description-btn">
-            <button type="button" mat-icon-button>
-                <mat-icon svgIcon="menu"></mat-icon>
-            </button>
-            <div>24</div>
-            <div>Menus</div>
-        </div>
-
-        <div class="description-btn">
-            <button type="button" mat-icon-button>
-                <mat-icon svgIcon="bullhorn"></mat-icon>
-            </button>
-            <div>125</div>
-            <div>Today Orders</div>
-        </div>
-    </div>
-  </div>
-</div>
+</ng-container>
