--- a/owner/owner-client/src/app/_layouts/account/account.component.html
+++ b/owner/owner-client/src/app/_layouts/account/account.component.html
@@ -1,10 +1,14 @@
-<app-profile-header></app-profile-header>
-
-<mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center">
-    <mat-tab label="Info"> 
-        <app-account-info></app-account-info>    
+<ng-container *ngIf="account">
+  <app-profile-header
+    [profileHeader]="account.profileHeader"
+    [delete]="false"
+    (onEdit)="onEditAccount($event)"
+  ></app-profile-header>
+  <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center">
+    <mat-tab label="Info">
+      <app-account-info [account]="account"></app-account-info>
     </mat-tab>
     <mat-tab label="Second"> Content 2 </mat-tab>
     <mat-tab label="Third"> Content 3 </mat-tab>
   </mat-tab-group>
-  
+</ng-container>
