--- a/owner/owner-client/src/app/_layouts/account/account-edit/account-edit.component.html
+++ b/owner/owner-client/src/app/_layouts/account/account-edit/account-edit.component.html
@@ -1,36 +1,66 @@
-<form class="form-wrapper">
+<form
+  class="form-wrapper"
+  *ngIf="accountForm"
+  [formGroup]="accountForm"
+  (ngSubmit)="onSubmit()"
+>
   <div class="first-col">
     <mat-form-field appearance="outline" class="max-width">
       <mat-label>Username</mat-label>
-      <input matInput placeholder="Enter owner username" />
+      <input
+        matInput
+        placeholder="Enter owner username"
+        formControlName="username"
+      />
     </mat-form-field>
 
     <div class="two-col">
       <mat-form-field appearance="outline" class="max-width">
         <mat-label>First Name</mat-label>
-        <input matInput placeholder="Enter owner first name" />
+        <input
+          matInput
+          placeholder="Enter owner first name"
+          formControlName="firstName"
+        />
       </mat-form-field>
 
       <mat-form-field appearance="outline" class="max-width">
         <mat-label>Last Name</mat-label>
-        <input matInput placeholder="Enter owner last name" />
+        <input
+          matInput
+          placeholder="Enter owner last name"
+          formControlName="lastName"
+        />
       </mat-form-field>
     </div>
 
     <mat-form-field appearance="outline" class="max-width">
       <mat-label>Email</mat-label>
-      <input matInput placeholder="Enter owner username" />
+      <input
+        matInput
+        placeholder="Enter owner username"
+        formControlName="email"
+      />
     </mat-form-field>
 
     <mat-form-field appearance="outline" class="max-width">
       <mat-label>Phone</mat-label>
-      <input matInput placeholder="Enter owner phone number" />
+      <input
+        matInput
+        placeholder="Enter owner phone number"
+        formControlName="phone"
+      />
     </mat-form-field>
 
     <div class="two-col">
       <mat-form-field appearance="outline" class="max-width">
         <mat-label>Choose a of birth</mat-label>
-        <input matInput [matDatepicker]="picker" placeholder="MM/DD/YYYY" />
+        <input
+          matInput
+          [matDatepicker]="picker"
+          placeholder="MM/DD/YYYY"
+          formControlName="birth"
+        />
         <mat-datepicker-toggle
           matIconSuffix
           [for]="picker"
@@ -40,9 +70,9 @@
 
       <mat-form-field appearance="outline" class="max-width">
         <mat-label>Select Country</mat-label>
-        <mat-select>
-          <mat-option *ngFor="let food of [1, 2, 3]" [value]="food">
-            {{ food }}
+        <mat-select formControlName="country">
+          <mat-option *ngFor="let country of countries" [value]="country.name">
+            {{ country.name }}
           </mat-option>
         </mat-select>
       </mat-form-field>
@@ -51,39 +81,65 @@
     <div class="two-col">
       <mat-form-field appearance="outline" class="max-width">
         <mat-label>City</mat-label>
-        <input matInput placeholder="Enter owner username" />
+        <input
+          matInput
+          placeholder="Enter owner username"
+          formControlName="city"
+        />
       </mat-form-field>
       <mat-form-field appearance="outline" class="max-width">
         <mat-label>Address</mat-label>
-        <input matInput placeholder="Enter owner username" />
+        <input
+          matInput
+          placeholder="Enter owner username"
+          formControlName="address"
+        />
       </mat-form-field>
     </div>
   </div>
   <div class="second-col">
     <mat-form-field appearance="outline" class="max-width">
       <mat-label>Leave a description</mat-label>
-      <textarea rows="10" matInput placeholder="Write something about your..."></textarea>
+      <textarea
+        rows="10"
+        matInput
+        placeholder="Write something about your..."
+        formControlName="description"
+      ></textarea>
     </mat-form-field>
 
     <div class="btn-wrapper">
-      <button type="button" mat-raised-button color="accent">
+      <button
+        type="button"
+        mat-raised-button
+        color="accent"
+        (click)="profileBtn.click()"
+      >
         <mat-icon svgIcon="image"></mat-icon>
         Profile Image
       </button>
+
+      <input
+        type="file"
+        style="display: none"
+        #profileBtn
+        multiple="false"
+        accept="image/*"
+        (change)="onProfileImage($event)"
+      />
 
       <button mat-raised-button color="primary">
         <mat-icon svgIcon="save"></mat-icon>
         Save
       </button>
     </div>
-
   </div>
 </form>
 
-
 <div class="profile-image-wrapper">
-    <app-image-with-delete
+  <app-image-with-delete
     [isMain]="true"
-    [image]="{ id: '', url: 'assets/img/default-profile.png', size: 0 }"
-    ></app-image-with-delete>
+    [image]="profileImage"
+    (deleteImage)="onDeleteProfileImage()"
+  ></app-image-with-delete>
 </div>
