--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav.component.css
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav.component.css
@@ -3,47 +3,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-
-.right-side {
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-}
-
-.img-wrapper {
-  width: 40px;
-  height: 40px;
-  cursor: pointer;
-  display: flex;
-}
-
-.img {
-  width: 100%;
-  height: auto;
-  border-radius: 50%;
-}
-
-.input-wrapper > mat-icon {
-  color: black;
+  padding: 0 2rem;
 }
 
 .search-wrapper {
   width: 35%;
 }
 
-.accountMenuBtn {
-  font-size: 14px;
-}
-
-.svg {
-  height: 14px;
-}
-
 @media only screen and (min-width: 960px) {
-  .right-toggle {
-    display: none;
-  }
   .logo-wrapper {
     display: none;
   }
@@ -53,7 +20,8 @@
   .search-wrapper {
     display: none;
   }
-  .right-side {
-    display: none;
+
+  .nav-wrapper {
+    padding: 0;
   }
 }
