working on notifications

--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav.component.html
@@ -8,7 +8,7 @@
       <app-search-bar></app-search-bar>
     </div>
     <div class="right-toggle">
-      <app-top-nav-toggle></app-top-nav-toggle>
+      <app-top-nav-buttons></app-top-nav-buttons>
     </div>
   </div>
 </mat-toolbar>
