--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification/notification.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification/notification.component.html
@@ -1,13 +1,12 @@
-<div class="main-wrapper">
-  <div class="title">Neki naslov</div>
+<div class="main-wrapper" *ngIf="notification">
+  <div class="title">{{ notification.title }}</div>
   <div class="description">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, iure maxime!
-    Optio harum alias r...
+    {{ notification.description }}
   </div>
   <div class="time">
     <mat-icon svgIcon="clock" class="svg"></mat-icon>
     2 days ago
   </div>
 
-  <div class="background-wrapper"></div>
+  <div class="background-wrapper" *ngIf="!notification.isSeen"></div>
 </div>
