--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification-btn.component.css
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/notification-btn/notification-btn.component.css
@@ -18,7 +18,7 @@
     border-bottom: 1px solid var(--primary);
 }
 
-.header{
+.header {
     font-size: 16px;
     display: flex;
     align-items: center;
@@ -37,4 +37,12 @@
     align-items: center;
     justify-content: center;
     color: var(--primary);
+}
+
+.mark-all-as-read {
+    font-size: 10px;
+    text-decoration: underline;
+    font-style: italic;
+    color: var(--accent);
+    cursor: pointer;
 }
